-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-ppc-aix
-
Component/s: hotspot
-
None
-
master
-
ppc
-
aix
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8033039 | 9 | Goetz Lindenmaier | P4 | Resolved | Fixed | b04 |
| JDK-8045341 | 8u25 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8038539 | 8u20 | Goetz Lindenmaier | P4 | Resolved | Fixed | b08 |
| JDK-8053450 | emb-8u26 | Goetz Lindenmaier | P4 | Resolved | Fixed | b17 |
| JDK-8175530 | openjdk7u | Goetz Lindenmaier | P4 | Resolved | Fixed | master |
ImplicitNullChecks did not work on platforms where the zero
page is only write protected.
This change adds os property 'zero_page_read_protected' and extends
the ImplicitNullCheck optimization to consider only stores if
this property is not true. If a decoded compressed oop will access the
guard page before the heap, Loads work again.
This is needed on AIX, where the page at address '0' is only write-protected.
----------------------------
This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/
http://hg.openjdk.java.net/ppc-aix-port/jdk8/hotspot/file/338e318f1e12/ppc_patches/0215_opto-extend_ImplicitNullCheck_optimizations.patch
page is only write protected.
This change adds os property 'zero_page_read_protected' and extends
the ImplicitNullCheck optimization to consider only stores if
this property is not true. If a decoded compressed oop will access the
guard page before the heap, Loads work again.
This is needed on AIX, where the page at address '0' is only write-protected.
----------------------------
This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/
http://hg.openjdk.java.net/ppc-aix-port/jdk8/hotspot/file/338e318f1e12/ppc_patches/0215_opto-extend_ImplicitNullCheck_optimizations.patch
- backported by
-
JDK-8033039 PPC64 (part 215): opto: Extend ImplicitNullCheck optimization.
-
- Resolved
-
-
JDK-8038539 PPC64 (part 215): opto: Extend ImplicitNullCheck optimization.
-
- Resolved
-
-
JDK-8045341 PPC64 (part 215): opto: Extend ImplicitNullCheck optimization.
-
- Resolved
-
-
JDK-8053450 PPC64 (part 215): opto: Extend ImplicitNullCheck optimization.
-
- Resolved
-
-
JDK-8175530 PPC64 (part 215): opto: Extend ImplicitNullCheck optimization.
-
- Resolved
-