8028471: PPC64 (part 215): opto: Extend ImplicitNullCheck optimization

Fixed Implicit NULL check optimization for AIX, where the page at address '0' is only write-protected.

Reviewed-by: kvn